
 XBT
 * Add a new function xbt_dynar_to_array that transforms a dynar into a
   NULL-terminated array. This may solve backward compatibility issues
   due to the change to return type of SD_Simulate. See also:
   http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
 * Add new logging macros, with variable number of arguments.

 INSTR
 * New configuration options
   Options triva/categorized and triva/uncategorized can be used to generate
   graph configuration files for Triva visualization tool.
 * Configuration option tracing/platform is renamed to tracing/categorized
 * XBT logging makes tracing error checks easier, new root log hierarchy: instr
 * New TRACE_user_link_variable interface:
   User provides the name of the link and the tracing variable to attach to it
 * the declaration of tracing categories must be done after the environment creation
 * simpler tracing interface, just one way to declare categories
    TRACE_category or TRACE_category_with_color, it is up to you
 * links in the trace file are again identified by their names
 * trace contains the full platform hierarchy exactly as declared using the ASes
 * Options tracing/msg/[task|process]:1 groups the process by hosts
   for both cases, tasks and processes must have names that are unique during the simulation
   these options generate traces that are suited to gantt-charts, such as the space-time view of Paje
 * The experimental option tracing/msg/volume is deprecated
   its functionality may be reincorporated if needed

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.5) stable; urgency=medium

 Model Checking
 * New feature to any SimGrid-based simulator: Model-Checking
   Check SIN#1 for more details.

 SMPI
 * New Model SMPI (three-interval linear regression for correction factors)
   See RR-7426, available at http://hal.inria.fr/inria-00527150
 * Ability to use FORTRAN MPI code (through f2c, automatically privatized)